@@ -7,8 +7,9 @@
 {pop} {userdict /pdfmark /cleartomark load put} ifelse
 
 
-% llx lly urx ury command
-/mark_file_line
+
+% llx lly urx ury URI
+/mark_URI
 {
     /command exch def
     /ury exch def
